Fix title sizes on small screens

--- a/src/pages/utils/globals.css
+++ b/src/pages/utils/globals.css
@@ -9,12 +9,12 @@
   /** The styles don't apply to rich text content. Therefore you need to touch CtfRichText.tsx **/
   .h1,
   h1 {
-    @apply text-xl font-normal leading-tighter md:text-4xl;
+    @apply text-3xl font-normal leading-tighter md:text-4xl;
   }
 
   .h2,
   h2 {
-    @apply text-xl font-semibold font-normal leading-tight md:text-3xl;
+    @apply text-2xl font-semibold font-normal leading-tight md:text-3xl;
   }
 
   .h3,
